fixed font visibility

--- a/src/Page-Styles/pageStyles.css
+++ b/src/Page-Styles/pageStyles.css
@@ -32,10 +32,17 @@
     outline: 0;
     font-size: 20px;
     border-radius: 25px;
-    padding: 15px;
+    padding: 18px;
     background-color: #EBECF0;
     text-shadow: 1px 1px 0 #FFF;
 }   
+
+
+
+.list-item > a {
+    text-decoration: none;
+    color: rgb(255, 2, 2);
+}
 
 
 .details{
